--- a/src/index.html
+++ b/src/index.html
@@ -3,9 +3,9 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Webpack Exercise</title>
+    <title>Capstone 2: API Project</title>
 </head>
 <body>
-    <h1>Hello webpack!</h1>
+    <h1>Hello Capstone 2!</h1>
 </body>
 </html>
