Edit api-stuff.js post function

--- a/src/index.html
+++ b/src/index.html
@@ -38,6 +38,14 @@
     <main>
         <div class="overlay">
         </div>
+        <div class="countriesContainer">
+            <div class="paramsBar">
+
+            </div>
+            <div class="countriesGrid">
+    
+            </div>
+        </div>
     </main>
     <footer class="fixed-bottom" id="myFooter">
         <div>Made with <span class="heart"><i class="fas fa-heart"></i></span> by <a
