--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 <body>
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark">
         <div class="container-fluid">
-             <a class="navbar-brand" href="#"><span class="part1">Countries</span><span class="part2">Lover</span></a>
+             <a class="navbar-brand" href="#"><span class="part1">Countries</span><span class="part2">Facts</span> <span class="icon"><i class="fas fa-globe"></i><i class="fas fa-lightbulb"></i></span></a>
          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main_nav"  aria-expanded="false" aria-label="Toggle navigation">
              <span class="navbar-toggler-icon"></span>
            </button>
@@ -42,7 +42,8 @@
             <div class="paramsBar">
 
             </div>
-            <div class="countriesGrid">
+            <div id="paginationContainer"></div>
+            <div class="countriesGrid" id="countriesGrid">
     
             </div>
         </div>
@@ -60,6 +61,7 @@
     </footer>
 
     <script src="https://kit.fontawesome.com/c397284221.js" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js"
         integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM"
         crossorigin="anonymous"></script>
