Add functions to fetch from and post to comment api

--- a/src/index.html
+++ b/src/index.html
@@ -62,9 +62,9 @@
                     </div>
                     <div class="comment-form">
                         <form>
-                            <input type="text" class="form-control mb-3" placeholder="Name" required>
-                            <textarea name="comment" class="form-control mb-3" placeholder="Your insites"></textarea>
-                            <button type="submit" class="btn btn-primary mb-3 w-100">Comment</button>
+                            <input type="text" class="username form-control mb-3" placeholder="Name" required>
+                            <textarea name="comment" class="comment form-control mb-3" placeholder="Your insites"></textarea>
+                            <button type="submit" class="comment-btn btn btn-primary mb-3 w-100">Comment</button>
                         </form>
                     </div>
                 </div>
