Add gif images to navbar brand

--- a/src/index.html
+++ b/src/index.html
@@ -16,7 +16,7 @@
 <body>
     <nav class="navbar fixed-top navbar-expand-lg navbar-dark">
         <div class="container-fluid">
-             <a class="navbar-brand" href="#"><span class="part1">Countries</span><span class="part2">Facts</span> <span class="icon"><i class="fas fa-globe"></i><i class="fas fa-lightbulb"></i></span></a>
+             <a class="navbar-brand" href="#"><img src="https://1.bp.blogspot.com/-8v8vMhoxdJU/XnVcs5WHIyI/AAAAAAAAzNU/yxynDuNvX2g06728NtvKAs_KVhfD9MJmQCLcBGAsYHQ/s1600/world_flags_globe_2.gif" alt="Spinning globe displaying countries flags" width="26"> <span class="part1">Countries</span><span class="part2">Facts</span><span class="icon"><img src="https://thumbs.gfycat.com/RawObedientCheetah.webp" alt="Lightbulb animation" width="20"></span></a>
          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#main_nav"  aria-expanded="false" aria-label="Toggle navigation">
              <span class="navbar-toggler-icon"></span>
            </button>
