Implement pagination system

--- a/src/index.html
+++ b/src/index.html
@@ -40,7 +40,7 @@
         </div>
         <div class="countriesContainer">
             <div class="paramsBar">
-
+                 <div class="paginationContainer"></div>
             </div>
             <div id="paginationContainer"></div>
             <div class="countriesGrid" id="countriesGrid">
