Add functions to display comments

--- a/src/index.html
+++ b/src/index.html
@@ -57,12 +57,16 @@
                     <div class="country-info">
 
                     </div>
-                    <div class="comments">
-                        <h3>Comments</h3>
+                    <div>
+                        <h5>Comments</h5>
+                        <div class="comments">
+                    
+                        </div>
                     </div>
                     <div class="comment-form">
-                        <form>
-                            <input type="text" class="username form-control mb-3" placeholder="Name" required>
+                        <form name="comment-form">
+                            <h5>Add a comment</h5>
+                            <input name="username" type="text" class="username form-control mb-3" placeholder="Name" required>
                             <textarea name="comment" class="comment form-control mb-3" placeholder="Your insites"></textarea>
                             <button type="submit" class="comment-btn btn btn-primary mb-3 w-100">Comment</button>
                         </form>
