Implement search feature

--- a/src/index.html
+++ b/src/index.html
@@ -42,6 +42,9 @@
         <div class="overlay">
         </div>
         <div class="countriesContainer">
+            <div class="searchFeedback">
+                
+            </div>
             <div class="paramsBar">
                  <div class="paginationContainer"></div>
             </div>
