Handle click on display all countries

--- a/src/index.html
+++ b/src/index.html
@@ -60,6 +60,14 @@
                         </ul>
                       </div>
                 </div>
+                <div class="displayParams">
+                        <form name="nbPerPageForm">
+                            <label for="nbPerPageInput" class="form-label">Nb. per page</label>
+                            <input id="nbPerPageInput" name="nbPerPageInput" type="number" min="10" max="40" value="24">
+                            <button type="submit" id="nbPerPageBtn" class="btn ripple">Set</button>
+                        </form>
+
+                </div>
                  <div class="paginationContainer"></div>
             </div>
             <div id="paginationContainer"></div>
