--- a/src/index.html
+++ b/src/index.html
@@ -73,7 +73,7 @@
             <div class="countriesGrid" id="countriesGrid">
             </div>
         </div>
-        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal">
+        <!-- <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal">
         Open modal
         </button>
         <div class="modal" id="myModal">
@@ -104,7 +104,7 @@
                 </div>
             </div>
             </div>
-        </div>
+        </div> -->
        
     </main>
     <footer class="fixed-bottom" id="myFooter">
