Handle click on comments buttons

--- a/src/index.html
+++ b/src/index.html
@@ -75,10 +75,7 @@
     
             </div>
         </div>
-        <button type="button" class="btn btn-primary" data-bs-toggle="modal" data-bs-target="#myModal">
-        Open modal
-        </button>
-        <div class="modal" id="myModal">
+        <div class="modal" id="countriesDetailsModal">
             <div class="modal-dialog modal-dialog modal-dialog-scrollable">
             <div class="modal-content">
         
