Update comments in modal on form submission

--- a/src/index.html
+++ b/src/index.html
@@ -91,7 +91,7 @@
 
                     </div>
                     <div>
-                        <h5>Comments</h5>
+                        <h5 id="commentsTitle">Comments</h5>
                         <div class="comments">
                     
                         </div>
@@ -100,7 +100,7 @@
                         <form name="comment-form">
                             <h5>Add a comment</h5>
                             <input name="username" type="text" class="username form-control mb-3" placeholder="Name" required>
-                            <textarea name="comment" class="comment form-control mb-3" placeholder="Your insites"></textarea>
+                            <textarea name="comment" class="comment form-control mb-3" placeholder="Fact about this country"></textarea>
                             <button type="submit" class="comment-btn btn btn-primary mb-3 w-100">Comment</button>
                         </form>
                     </div>
