--- a/src/index.html
+++ b/src/index.html
@@ -88,12 +88,23 @@
                 <!-- Modal body -->
                 <div class="modal-body">
                     <div class="country-info">
-
+                        <img class="img-fluid rounded mx-auto d-block info-flag" src="https://upload.wikimedia.org/wikipedia/commons/thumb/b/b0/No_flag.svg/338px-No_flag.svg.png" alt="country flag">
+                        <h3 class="info-name">Name</h3>
+                        <div class="d-inline-flex justify-content-between">
+                            <div class ="m-3">
+                                <p><b>Capital:</b> <span class="info-capital">Capital</span></p>
+                                <p><b>Population:</b> <span class="info-population">1,000,000 (2018)</span></p>
+                            </div >
+                            <div class ="m-3">
+                                <p><b>Currency:</b> <span class="info-currency">USD</span></p>
+                                <p><b>Dial-Code:</b> <span class="info-dialcode">+237</span></p>
+                            </div>
+                        </div>
                     </div>
                     <div>
-                        <h5 id="commentsTitle">Comments<span class="badge rounded-pill bg-primary"></span></h5>
+                        <h5 id="commentsTitle" class="mr-2">Comments<span class="badge rounded-pill bg-primary"></span></h5>
                         <div class="comments m-0">
-                    
+                            
                         </div>
                     </div>
                     <div class="comment-form">
